--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cligj==0.7.2
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
+copernicusmarine==1.2.0
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
