--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+affine==2.4.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+argopy==0.1.16
 arrow==1.3.0
+asciitree==0.3.3
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==23.2.0
 Babel==2.14.0
+bcrypt==4.1.3
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.8.2
+boto3==1.34.107
+botocore==1.34.107
+cachier==3.0.0
 Cartopy==0.23.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -16,33 +26,50 @@ charset-normalizer==3.3.2
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
+cloudpickle==3.0.0
 colorama==0.4.6
 comm==0.2.2
+contextily==1.6.0
 contourpy==1.2.1
 copernicusmarine==1.2.2
+cryptography==42.0.7
 cycler==0.12.1
+dask==2024.5.0
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
+distlib==0.3.8
+erddapy==2.2.0
 executing==2.0.1
+fasteners==0.19
 fastjsonschema==2.19.1
+filelock==3.15.4
 fiona==1.9.6
+Flask==3.0.3
 fonttools==4.51.0
 fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.5.0
 geographiclib==2.0
 geopandas==0.14.3
 geopy==2.4.1
+geos==0.2.3
 h11==0.14.0
 h5netcdf==1.3.0
 h5py==3.11.0
+holteandtalley==0.0.3
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 ipykernel==6.29.4
 ipython==8.23.0
+ipywidgets==8.1.2
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.3
+jmespath==1.0.1
+joblib==1.4.2
 json5==0.9.25
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -56,11 +83,18 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.1.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.26.0
+jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
+locket==1.0.0
+lxml==5.2.2
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
+matplotlib-scalebar==0.8.1
+mercantile==1.2.1
+metview==1.16.0
 mistune==3.0.2
+multidict==6.0.5
 nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.4
@@ -68,24 +102,33 @@ nest-asyncio==1.6.0
 netCDF4==1.6.5
 notebook==7.1.2
 notebook_shim==0.2.4
+numcodecs==0.12.1
 numpy==1.26.4
 overrides==7.7.0
 packaging==24.0
+paho-mqtt==2.1.0
 pandas==2.2.2
 pandocfilters==1.5.1
+paramiko==3.4.0
 parso==0.8.4
+partd==1.4.2
 pillow==10.3.0
 platformdirs==4.2.0
 polars==0.20.20
+portalocker==2.8.2
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.17.2
+pygmt==0.12.0
+PyNaCl==1.5.0
 pyparsing==3.1.2
 pyproj==3.6.1
+pysftp==0.2.9
 pyshp==2.3.1
+pystac==1.10.1
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -93,21 +136,29 @@ pywin32==306
 pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==26.0.0
+rasterio==1.3.10
 referencing==0.34.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rioxarray==0.15.5
 rpds-py==0.18.0
+s3transfer==0.10.1
 scipy==1.13.0
 seaborn==0.13.2
+semver==3.0.2
 Send2Trash==1.8.3
+setuptools==69.5.1
 shapely==2.0.3
+simplekml==1.3.6
 six==1.16.0
 sniffio==1.3.1
+snuggs==1.4.7
 soupsieve==2.5
 stack-data==0.6.3
 terminado==0.18.1
 tinycss2==1.2.1
+toolz==0.12.1
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
@@ -115,8 +166,16 @@ types-python-dateutil==2.9.0.20240316
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
+virtualenv==20.26.3
+VirtualFleet==0.4.0
+watchdog==4.0.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
-xarray==2024.3.0
+Werkzeug==3.0.3
+widgetsnbextension==4.0.10
+xarray==2024.2.0
+xyzservices==2024.4.0
+yarl==1.9.4
+zarr==2.18.1
